--- a/Landing Page/Landing_Page.html
+++ b/Landing Page/Landing_Page.html
@@ -43,7 +43,7 @@
                 <li><a href="#">Pricing</a></li>
             </ul>
             <div class="buttons">
-                <a href="#" class="login">Login</a>
+                <a href="../Login Page/Login.html" class="login">Login</a>
                 <a href="#" class="trial">Try 3 Day Trial of Tutoring </a>
             </div>
             </div>
